Fixing layout problems in IE6 with the position of the elements in the status bar.
git-svn-id: http://fbug.googlecode.com/svn/lite@5117 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/branches/firebug1.3/skin/xp/firebug.css
+++ b/branches/firebug1.3/skin/xp/firebug.css
@@ -670,6 +670,7 @@
     font-size: 11px;
     width: 100%;
     table-layout: fixed;
+    background: #fff;
 }
 
 .memberLabelCell {
@@ -883,9 +884,11 @@
 
 #fbToolbarContent {
     display: block;
+    position: fixed;
+    _position: absolute;
     top: 0;
     padding-top: 4px;
-    height: 27px;
+    height: 23px;
     clip: rect(0, 2048px, 27px, 0);
 }
 
